// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`startServerEpic actions snapshot when on api request errors 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "startServer/INITIALIZED",
  },
  Object {
    "reason": "error message",
    "type": "startServer/FAILED",
  },
]
`;

exports[`startServerEpic actions snapshot when response object hasn't got errors 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "startServer/INITIALIZED",
  },
  Object {
    "id": "some id",
    "type": "startServer/SUCCEED",
  },
]
`;
